--- a/src/index.html
+++ b/src/index.html
@@ -1,45 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>MDB Webpack Starter</title>
-    <!-- Favicon -->
-    <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-    <!-- Google Fonts Roboto -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
-    />
-    <!-- Main css file -->
-    <link rel="stylesheet" href="css/index.min.css" />
-    <!-- Custom styles -->
-    <style></style>
-  </head>
+<html lang="en" xmlns="http://www.w3.org/1999/html">
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+  <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+  <title>MDB Webpack Starter</title>
+  <!-- Favicon -->
+  <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon"/>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
+  <!-- Google Fonts Roboto -->
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+  />
+  <!-- Main css file -->
+  <link rel="stylesheet" href="css/index.min.css"/>
+  <!-- Custom styles -->
+  <style></style>
+</head>
 
-  <body>
-    <!-- Start your project here-->
-    <div class="container">
-      <div class="d-flex justify-content-center align-items-center" style="height: 100vh">
-        <div class="text-center">
-          <img
-            src="https://mdbootstrap.com/img/logo/mdb-transparent-250px.png"
-            style="width: 250px; height: 90px;"
-          />
-          <h5 class="pt-3">Thank you for using our product. We're glad you're with us.</h5>
-          <p class="pb-5">MDB Team</p>
+<body>
+<!-- Start your project here-->
+<div class="container">
+  <div class=" main d-flex justify-content-center align-items-center" style="height: 100vh">
+    <div class="d-flex flex-column align-items-center w-75">
+      <h1 class="text-center text-black mb-5">Add new Product<br/> to Your List</h1>
+      <form class="w-75 mb-5">
+        <div class="form-outline mb-4">
+          <input type="text" id="name" class="form-control"/>
+          <label class="form-label" for="name">Name of Product</label>
         </div>
-      </div>
+        <div class="form-outline mb-4">
+          <input type="number" id="amount" class="form-control"/>
+          <label class="form-label" for="amount">Amount of Product</label>
+        </div>
+        <div class="d-flex justify-content-center align-items-baseline mb-4">
+          <div class="form-check me-4">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="typeAmount"
+              id="type_kg"
+            />
+            <label class="form-check-label" for="type_kg"> Kilograms </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="typeAmount"
+              id="type_pcs"
+            />
+            <label class="form-check-label" for="type_pcs">Pieces </label>
+          </div>
+        </div>
+        <div>
+          <label for="category" class="text-black mb-2">Select Product Category</label>
+          <select
+            class="form-select mb-4"
+            type="text"
+            name="category"
+            id="category">
+            <option disabled selected value> -- select a category -- </option>
+            <option>Vegetables</option>
+            <option>Fruits</option>
+            <option>Dairy</option>
+            <option>Breadstuff</option>
+            <option>Others</option>
+          </select>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block" id="button">Add Product</button>
+      </form>
+      <div class="content d-flex justify-content-around"></div>
     </div>
-    <!-- End your project here-->
+  </div>
+</div>
+<!-- End your project here-->
 
-  </body>
-  <!-- Main js file -->
-  <script type="text/javascript" src="js/index.min.js"></script>
-  <!-- Custom scripts -->
-  <script type="text/javascript"></script>
+</body>
+<!-- Main js file -->
+<script type="text/javascript" src="js/index.min.js"></script>
+<!-- Custom scripts -->
+<script type="text/javascript"></script>
 
 </html>
